kubernetes/startexpress.yaml
apiVersion: v1
kind: Pod
metadata:
  name: expressapi
  labels:
    app: expressapi
spec:
  containers:
    - name: expressapi
      image: kornkitti/express-hello-world
      ports:
      - name: nodejs-port
        containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: expressapi-service
spec:
  selector:
    app: expressapi
  ports:
    - port: 8080
      targetPort: 8080
