kubernetes/starttraefik.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  labels:
    app: traefik-ingress-lb
spec:
  selector:
    matchLabels:
      app: traefik-ingress-lb
  template:
    metadata:
      labels:
        app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v1.7
        name: traefik-ingress-lb
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: https
          containerPort: 443
          hostPort: 443
        - name: dashboard
          containerPort: 8080
          hostPort: 8080
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
        - --api
        - --accesslog
        - --logLevel=INFO
        - --kubernetes
        - --defaultentrypoints=http,https
        - --entrypoints=Name:https Address::443 TLS
        - --entrypoints=Name:http Address::80
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service-api
spec:
  selector:
    app: expressapi
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: nodejs-port
    - protocol: TCP
      port: 443
      name: https
      targetPort: nodejs-port
  type: LoadBalancer
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service-dashboard
spec:
  selector:
    app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: dashboard
  type: LoadBalancer

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-ingress-service-api
          servicePort: http
  # tls:
  #  - secretName: traefik-ui-tls-cert
